python/testData/skeletons/BinaryStandardModule.py
import binascii
import datetime
import <error descr="No module named nonexistent">nonexistent</error>


print(binascii)
print(datetime)
print(nonexistent)
